# deno-in-tauri

./: .gitattributes  CHANGELOG.md  README.md  deno.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: lint.yml  release.yml  test.yml
src/: App.vue  IconLoading.vue  main.ts  monaco.ts  theme.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
