[package]
name = "deno-in-tauri"
version = "0.0.0"
edition = "2024"

[lib]
name = "deno_in_tauri_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rustyscript = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# For ubuntu -> aarch64-unknown-linux-gnu cross-compilation.
# If you feel the compilation is too slow, you can remove this dependency,
# and build aarch64-unknown-linux-gnu target on the matched machine (don't cross-compile)
openssl = { version = "0.10", features = [ "vendored" ] }
